--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://root:root@localhost:27017/synergentl
-logging.level.root=DEBUG
+#spring.data.mongodb.uri=mongodb://root:root@localhost:27017/synergentl
+#logging.level.root=DEBUG
